--- a/src/View/Home/about.html.twig
+++ b/src/View/Home/about.html.twig
@@ -1,6 +1,5 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1></h1>
-    {{ dump(session) }}
+    <h1>A propos</h1>
 {% endblock %}
