--- a/src/View/Robot/_form.html.twig
+++ b/src/View/Robot/_form.html.twig
@@ -12,18 +12,43 @@
             <label for="floatingInput" class="form-label">Nom Robot:</label>
         </div>
         <div class="input-box">
-            <input type="text" class="form-control" id="floatingInput" placeholder="" value="{{ robot.accessoire }}"
-                   name="accessoire">
-            <label for="floatingInput" class="form-label">Accessoire :</label>
+            <p>Robot :</p>
+            <div class="container">
+                <span>
+                    <label for="floatingInput" class="form-label"><img style="height: 100px;" src="https://zupimages.net/up/21/19/cg7j.png"></label>
+                    <input type="radio"  id="floatingInput" value="https://zupimages.net/up/21/19/cg7j.png" name="image">
+                </span>
+                <span>
+                    <label for="floatingInput" class="form-label"><img style="height: 100px;" src="https://zupimages.net/up/21/19/l3em.png"></label>
+                    <input type="radio"  id="floatingInput" value="https://zupimages.net/up/21/19/l3em.png" name="image">
+                </span>
+                <span>
+                    <label for="floatingInput" class="form-label"><img style="height: 100px;" src="https://zupimages.net/up/21/19/bqx3.png"></label>
+                    <input type="radio"  id="floatingInput" value="https://zupimages.net/up/21/19/bqx3.png" name="image">
+                </span>
+            </div>
         </div>
         <div class="input-box">
-            <input type="text" class="form-control" id="floatingInput" placeholder="" value="{{ robot.image }}"
-                   name="image">
-            <label for="floatingInput" class="form-label">Robot :</label>
+            <p>Accessoires :</p>
+            <div class="container">
+                <span>
+                    <label for="floatingInput" class="form-label"><img style="height: 80px;" src="https://zupimages.net/up/21/19/gc0n.png"></label>
+                    <input type="radio"  id="floatingInput" value="https://zupimages.net/up/21/19/gc0n.png" name="accessoire">
+                </span>
+                <span>
+                    <label for="floatingInput" class="form-label"><img style="height: 80px;" src="https://zupimages.net/up/21/19/7f91.png"></label>
+                    <input type="radio"  id="floatingInput" value="https://zupimages.net/up/21/19/7f91.png" name="accessoire">
+                </span>
+                <span>
+                    <label for="floatingInput" class="form-label"><img style="height: 80px;" src="https://zupimages.net/up/21/19/jdj4.png"></label>
+                    <input type="radio"  id="floatingInput" value="https://zupimages.net/up/21/19/jdj4.png" name="accessoire">
+                </span>
+            </div>
         </div>
         <div class="container-fluid">
             <input type="submit" class="form-button" value="Valider">
             <a type="back" href="/robot/index" class="return-button" value="Retour"><i class="las la-undo"></i></a>
         </div>
     </div>
-</form>
+</form> 
+
