--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,29 +9,24 @@
   .button_gradient {
     text-decoration: none;
     border-radius: 36px;
-    box-shadow: 0 8px 8px -4px rgb(255 0 91 / 80%),
-      0 12px 32px 0 rgb(138 69 245 / 12%), 0 2px 4px -1px rgb(21 23 24 / 80%),
-      0 0 1px 0 rgb(138 69 245 / 40%);
+    box-shadow: 0 8px 8px -4px rgb(255 0 91 / 80%),      0 12px 32px 0 rgb(138 69 245 / 12%), 0 2px 4px -1px rgb(21 23 24 / 80%),      0 0 1px 0 rgb(138 69 245 / 40%);
     font-size: 16px;
     font-weight: bold;
     line-height: 1.75;
     color: #ffffff;
     padding: 10px 24px;
     display: inline-block;
-    background-image: linear-gradient(
-      to right,
-      rgb(31, 255, 255),
-      rgb(138, 69, 245) 53%,
-      #ff005b
-    );
+    background-image: linear-gradient(      to right,      rgb(31, 255, 255),      rgb(138, 69, 245) 53%,      #ff005b    );
+    -webkit-border-radius: 36px;
+    -moz-border-radius: 36px;
+    -ms-border-radius: 36px;
+    -o-border-radius: 36px;
 }
   
 .button {
     text-decoration: none;
     border-radius: 36px;
-    box-shadow: 0 8px 8px -4px rgb(255 0 91 / 80%),
-      0 12px 32px 0 rgb(138 69 245 / 12%), 0 4px 4px -1px rgb(21 23 24 / 80%),
-      0 0 1px 0 rgb(138 69 245 / 40%), inset 0 2px 6px 0 rgb(138 69 245 / 80%);
+    box-shadow: 0 8px 8px -4px rgb(255 0 91 / 80%),      0 12px 32px 0 rgb(138 69 245 / 12%), 0 4px 4px -1px rgb(21 23 24 / 80%),      0 0 1px 0 rgb(138 69 245 / 40%), inset 0 2px 6px 0 rgb(138 69 245 / 80%);
     border: solid 1px rgba(255, 255, 255, 0.24);
     background-image: linear-gradient(to left, #181a1a, #1d1d1d);
     font-size: 16px;
@@ -40,8 +35,37 @@
     color: #ffffff;
     padding: 10px 24px;
     display: inline-block;
+    -webkit-border-radius: 36px;
+    -moz-border-radius: 36px;
+    -ms-border-radius: 36px;
+    -o-border-radius: 36px;
 }
-  
+
+/* ----- NAVBAR ------- */
+
+#mainNav {
+  position: fixed;
+  background-color: #007dc69d;
+  height: 2%;
+  font-size: 18px;
+}
+
+#nav_title {
+  font-size: 23px;
+}
+
+#mainNav a {
+  color:rgb(233, 255, 255);
+}
+
+
+/* ----- HOME ------- */
+
+#home_background {
+  background-image: url('https://zupimages.net/up/21/19/rft2.jpeg');
+  background-size: cover;
+}
+
 
 /*CSS POUR  PAGE PAYMENT 
 */
@@ -53,7 +77,7 @@ body {
 
 .card {
 
-    background: rgb(238, 191, 129);
+    background: rgb(180, 230, 175);
     color: beige;
     width: 410px !important
 }
@@ -79,7 +103,11 @@ img {
 
 .btn-primary {
     border: none;
-    border-radius: 30px
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
 }
 
 h5 {
@@ -98,7 +126,11 @@ h5 {
     transition: all 200ms;
     opacity: 0.5;
     color: #f3f5f7 !important;
-    font-size: 75%
+    font-size: 75%;
+    -webkit-transition: all 200ms;
+    -moz-transition: all 200ms;
+    -ms-transition: all 200ms;
+    -o-transition: all 200ms;
 }
 
 .form-control:focus+.form-control-placeholder,
@@ -106,7 +138,11 @@ h5 {
     font-size: 75%;
     transform: translate3d(0, -100%, 0);
     opacity: 1;
-    top: 10px
+    top: 10px;
+    -webkit-transform: translate3d(0, -100%, 0);
+    -moz-transform: translate3d(0, -100%, 0);
+    -ms-transform: translate3d(0, -100%, 0);
+    -o-transform: translate3d(0, -100%, 0);
 }
 
 .form-control {
@@ -114,7 +150,11 @@ h5 {
     border: none;
     border-bottom: 1px solid #fff !important;
     border-radius: 0;
-    outline: 0
+    outline: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    -o-border-radius: 0;
 }
 
 .form-control:focus,
@@ -125,7 +165,11 @@ h5 {
     box-shadow: none;
     border-radius: 0;
     color: #dae0e5;
-    letter-spacing: 1px
+    letter-spacing: 1px;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    -o-border-radius: 0;
 }
 
 /* FIN CSS POUR PAGE PAYMENT 
@@ -145,7 +189,11 @@ body {
     padding: 20px;
     border-radius: 5px;
     border: none;
-  }
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
   .modal-confirm .modal-header {
     border-bottom: none;   
         position: relative;
@@ -211,3 +259,10 @@ body {
     display: inline-block;
     margin: 100px auto;
   }
+/*love_robots*/
+.carousel {
+  background-color: black;
+}
+.hot {
+background-color: #8305219d;
+}
