--- a/src/View/Home/contact.html.twig
+++ b/src/View/Home/contact.html.twig
@@ -1,8 +1,7 @@
 {% extends 'layout.html.twig' %}
 {% block content %}
 	<section class="container-fluid pt-5 px-0" id="body">
-		<h1 class="text-center"> RECEVEZ VOTRE ROBOT </h1>
-		<div class="separation"><hr></div>
+		<h1 class="text-center"> RECOIS ET ENTRAINE TON ROBOT GRACE A NOS PACKS </h1>
 		<div class="container-fluid p-4">
 			<div class="contact_form row m-5" id="contact_row">
 				<form method="post">
@@ -46,13 +45,11 @@
 					<div class="row g-2">
 						<div class="col-md mx-3 my-3">
 							<select name="subject" class="form-control" id="floatingInputs">
-								<option value="Sujet de la demande">Objet de votre demande:</option>
-								<option value="Echange">Echange de votre robot</option>
-								<option value="Retour">retour d'un robot</option>
-								<option value="Informations">Information sur les perf de votre Robot</option>
-								<option value="Livraison">Question concernant la livraison</option>
-								<option value="Reservation">Question sur la réservation 18+</option>
-							</select>
+								<option value="Sujet de la demande">Package</option>
+								<option value="Echange">Pack 1</option>
+								<option value="Retour">Pack 2</option>
+								<option value="Informations">Pack 3</option>
+								</select>
 						</div>
 					</div>
 					{% if errors.subject is defined and not empty %}
@@ -60,25 +57,33 @@
 							{{ errors.subject }}
 						</div>
 					{% endif %}
-					<div class="form-floating mx-3 my-3">
-						<textarea type="text" class="form-control" id="floatingInput_message" placeholder="Message" value="{{ contact.message }}" name="message"></textarea>
-						<label for="floatingInput" class="form-label pt-2">Message :</label>
-					</div>
-					{% if errors.message is defined and not empty %}
-						<div class="alert alert-warning" role="alert">
-							{{ errors.message }}
-						</div>
-					{% endif %}
-					<div class="col-md mx-3 my-3">
-						<div class="rating text-center">
-							<h4>Laissez-nous votre avis</h4>
-							<a href="#5" title="Donner 5 étoiles">☆</a>
-							<a href="#4" title="Donner 4 étoiles">☆</a>
-							<a href="#3" title="Donner 3 étoiles">☆</a>
-							<a href="#2" title="Donner 2 étoiles">☆</a>
-							<a href="#1" title="Donner 1 étoile">☆</a>
-						</div>
-					</div>
+
+<section>
+<div class="card-group mt-5 text-center">
+  <div class="card">
+    <img src="https://png.pngtree.com/png-vector/20190618/ourlarge/pngtree-first-aid-box-line-black-icon-png-image_1503402.jpg" class="card-img-top">
+    <div class="card-body">
+      <h5 class="card-title">PACK 1</h5>
+      <p class="card-text"> DES OUTILS POUR RÉPARER VOTRE ROBOT EN CAS DE CASSE.</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="https://static.vecteezy.com/ti/vecteur-libre/p1/602343-icone-de-la-belle-nourriture-chaude-ligne-noire-gratuit-vectoriel.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">PACK 2</h5>
+      <p class="card-text">DE LA NOURRITURE SPÉCIALE ROBOT</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="https://static.vecteezy.com/ti/vecteur-libre/p1/453610-icones-de-gadgets-noirs-vectoriel.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">PACK 3</h5>
+      <p class="card-text"> MULTIPLES GADGETS POUR PERSONNALISER VOTRE ROBOT</p>
+    </div>
+  </div>
+</div>
+</section>
+
 					<div class="form-floating mt-4 text-center">
 						<a href="#myModal" class="trigger-btn" data-toggle="modal"><input type="submit" class="button_gradient" value="Valider"></a>
 						<a type="back" href="/" class="button m-2" value="Retour">Retour</a>
@@ -98,7 +103,7 @@
 						<h4 class="modal-title">Merci !</h4>	
 					</div>
 					<div class="modal-body">
-						<p class="text-center">Votre demande est envoyée ! Nous vous répondrons dans les plus bref délais !</p>
+						<p class="text-center">Votre demande est envoyée ! Vous recevrez votre robot dans les plus bref délais !</p>
 					</div>
 					<div class="modal-footer">
 						<button class="btn btn-success btn-block" data-dismiss="modal">OK</button>
