--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -1,6 +1,95 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1></h1>
-    {{ dump(session) }}
+    <header id="home_background" class="text-center text-white d-flex masthead my-5 py-5" style="background-image:url('../../public/assets/images/mars-header.jpg');">
+        <div class="container my-auto">
+            <div class="row">
+                <div class="col-lg-10 mx-auto">
+                    <h1 class="text-uppercase"><strong>Bienvenue sur Roboxing !</strong></h1>
+                    <hr>
+                </div>
+            </div>
+            <div class="col-lg-8 mx-auto">
+                <p class="text-faded mb-5">Sur Mars, on s'ennuie vite. Pourquoi ne pas inviter quelques robots à prendre part à une compétition sportive ?</p><a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="#services">Comment participer</a>
+            </div>
+        </div>
+    </header>
+    <section class="bg-primary" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col offset-lg-8 text-center py-5 mx-auto">
+                    <h2 class="text-white section-heading">Ca vous tente ? Commencez par créer un compte !</h2>
+                    <hr class="light my-4">
+                    <p class="text-faded mb-4">Créer un compte est vraiment simple et rapide. Il vous permettra ensuite de participer à la compétition.</p><a class="btn btn-light btn-xl js-scroll-trigger" role="button" href="#services">Créez votre compte !</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center pt-3">
+                    <h2 class="section-heading">Par étape</h2>
+                    <hr class="my-4">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-6 col-lg-3 text-center">
+                    <div class="mx-auto service-box mt-5"><i class="fa fa-diamond fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-once="true"></i>
+                        <h3 class="mb-3">Quelle discipline ?</h3>
+                        <p class="text-muted mb-0">Choisissez la discipline qui vous convient parmi la boxe, la course ou encore l'escrime !</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 text-center">
+                    <div class="mx-auto service-box mt-5"><i class="fa fa-paper-plane fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-delay="200" data-aos-once="true"></i>
+                        <h3 class="mb-3">Quel lieu ?</h3>
+                        <p class="text-muted mb-0">Sélectionnez une liste de lieux en lien avec la discipline</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 text-center">
+                    <div class="mx-auto service-box mt-5"><i class="fa fa-newspaper-o fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-delay="400" data-aos-once="true"></i>
+                        <h3 class="mb-3">Quel robot ?</h3>
+                        <p class="text-muted mb-0">Créez votre robot en lui donnant un nom, un accessoire ainsi qu'une apparence</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="portfolio" class="p-0">
+        <div class="container-fluid p-0">
+            <div class="row no-gutters popup-gallery text-center">
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="https://zupimages.net/up/21/19/cg7j.png"><img class="img-fluid" src="assets/img/thumbnails/1.jpg">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded"><span>Category</span></div>
+                                <div class="project-name"><span>Project Name</span></div>
+                            </div>
+                        </div>
+                    </a></div>
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="https://zupimages.net/up/21/19/l3em.png"><img class="img-fluid" src="assets/img/thumbnails/2.jpg">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded"><span>Category</span></div>
+                                <div class="project-name"><span>Project Name</span></div>
+                            </div>
+                        </div>
+                    </a></div>
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="https://zupimages.net/up/21/19/bqx3.png"><img class="img-fluid" src="assets/img/thumbnails/3.jpg">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded"><span>Category</span></div>
+                                <div class="project-name"><span>Project Name</span></div>
+                            </div>
+                        </div>
+                    </a></div>
+            </div>
+        </div>
+    </section>
+    <section class="text-white bg-dark py-5">
+        <div class="container text-center">
+            <h2 class="mb-4">Commencez maintenant ! Persévérance et Ingéniosité s'impatientent et veulent du spectacle !</h2><a class="btn btn-light btn-xl sr-button" role="button" data-aos="zoom-in" data-aos-duration="400" data-aos-once="true" href="#">Commencez</a>
+        </div>
+    </section>
 {% endblock %}
